# anssi-recommandations-cyber-data

./: .dockerignore  .env.template  .gitignore  .tdd-plan.md  Dockerfile  Dockerfile.evalap-personnalise  LICENSE  README.md  docker-compose.yml  evalap-compose.yml  metriques.json  poc_deepeval.py  poc_deepeval_hallucination.py  pyproject.toml  tasks_patch.py
.github/: renovate.json
.github/workflows/: checkov.yml  ci.yml  codeql-analysis.yml  construit_image_evalap.yml  deploie_evaluation.yml  deploiement.yml  genere_calculs_metriques_avec_deepeval.yml  genere_calculs_metriques_avec_evalap.yml  lance_evaluation_manuelle.yml  lance_evaluation_manuelle_mqc.yml  lance_evaluation_manuelle_reformulation.yml  renovate.yml  securite-ci.yml
documentation/: HyDE.md  README.md  authentification_yubikey.md
documentation/evaluation/: README.md  context.puml
documentation/jeopardy/: HyDE.md  README.md  context.puml
donnees/: QA-labelisé-Question_par_guide_echantillon.csv  dataset_reformulation.csv  documents_distants.json  jointure-nom-guide.csv  jointure-nom-tous-documents.csv  questions_avec_verite_terrain.csv  questions_avec_verite_terrain_3.csv
donnees/collection_reponses_maitrisees/: faq_reponses_maitrisees.html  faq_reponses_maitrisees.mapping.json
donnees/pages_html/: messervices.cyber.gouv.fr_.html  messervices.cyber.gouv.fr_nis2.html
scripts/: genere_reponses_reference.py  puppeteer.js
scripts/admin/: genere_token.py  liste_les_collections.py  supprime_collection.py
scripts/clever-cloud/: pre-run-clever.sh
src/: chargeur_metriques.py  client_evalap.py  configuration.py  consignateur_evaluation.py  evalap_modele.py  formateur_resultats_experiences.py  indexe_documents_rag.py  lecteur_csv.py  main.py  main_evalap.py  main_remplir_csv.py  metriques.py  poc_deepeval.py  remplisseur_reponses.py  serveur.py  verificateur_experience_terminee.py
src/adaptateurs/: authentification.py  client_albert.py  client_albert_collections_reel.py  client_albert_indexation_reel.py  client_albert_memoire.py  client_albert_reel.py  client_albert_reformulation_reel.py  clients_albert.py  journal.py
src/api/: api.py  api_collections.py  api_documents.py  api_evaluation.py  api_jeopardy.py  auth.py  securite.py
src/documents/: ajoute_document_a_la_collection.py  document.py  (+19 more)
tempaltes/: prompt_generateur_questions.txt
tests/: conftest.py  test_chargeur_metriques.py  test_client_evalap.py  test_consignateur_evaluation.py  test_ecriture_metabase.py  test_experience.py  test_formateur_resultats_experiences.py  test_indexe_documents_rag.py  test_lecteur_csv.py  test_main.py  test_mapping_noms_documents.py  test_metriques_personnalisees.py  test_remplisseur_pose_question.py  test_traitement_lot.py  test_verificateur_experience_terminee.py
ui/: .gitignore  .prettierrc  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+233 files in other folders)
