[project]
name = "RecommandationsCyberData"
version = "0.1.0"
description = "Une interface permettant d'évaluer le bot de l'ANSSI, basé sur Albert [Albert](https://github.com/betagouv/anssi-recommandations-cyber), et d'y indexer de nouveaux documents RAG."
requires-python = ">=3.13"
dependencies = [
     "canvas",
     "deepeval",
     "docling",
     "httpx",
     "openai",
     "json-repair",
     "pandas==2.3.2",
     "pikepdf",
     "pydantic",
     "pytest",
     "reportlab",
    "requests",
    "respx",
    "types-reportlab"
]

[dependency-groups]
dev = [
    "mypy",
    "pandas-stubs>=2.3.0,<2.3.3",
    "psycopg2-binary",
    "pytest-asyncio",
    "ruff",
    "types-psycopg2",
    "types-requests",
]

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
target-version = "py313"